<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_open"
            android:icon="@drawable/ic_menu_open"
            android:title="@string/file_open"/>

        <item
            android:id="@+id/nav_item_add"
            android:icon="@drawable/ic_menu_item_add"
            android:title="@string/add_item"/>
        <item
            android:id="@+id/nav_file_add"
            android:icon="@drawable/ic_menu_file_add"
            android:title="@string/create_file"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"/>
    </group>

</menu>
